client/src/styles.scss
$primary-color: lightblue;

@font-face {
  font-family: "B-Nazanin";
  src: local("B-Nazanin"), url(./fonts/b-nazanin-regular.ttf) format("truetype");
}

body {
  font-family: B-nazanin;
  font-weight: 500;
  font-size: 1.2rem;
}

.table-container {
  width: 60%;
  margin: 0 auto;

  .table-container__head {
    background: $primary-color;
    display: flex;
    position: relative;
    cursor: pointer;
    justify-content: space-between;
    padding: 0.2rem 1rem;
    align-items: center;
    text-align: center;
    width: 100%;
    height: 40px;
    border-radius: 10px;

    .value-info {
      margin-right: 10px;
    }
  }

  .buttons {
    display: flex;
    width: 80px;
  }

  .table-info {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }

  .table-container__head.active .toggle-btn {
    transform: rotate(180deg);
  }

  .table {
    width: 100%;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
  }

  .toggle-btn {
    position: absolute;
    cursor: pointer;
    margin-left: 1rem;
    left: 0;
    font-size: 16px;
    transition: transform ease-in-out 0.2s;
  }
}

.asset-detail__header {
  .label {
    margin-left: 10px;
  }
}

.styled-value {
  span {
    margin-left: 5px;
  }
}

.add-form {
  margin: 5rem auto;
  padding: 0 2rem;
  max-width: 700px;
  height: 100vh;
  justify-content: center;

  .form-group {
    margin-bottom: 10px;
  }

  label {
    margin-bottom: 3px;
  }

  .purchase-date {
    label {
      margin-left: 2rem;
    }
  }

  .btn.submit {
    width: 100%;
    padding: 10px;
  }
}

